kubernetes/apps/security/authentik/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: selfhosted-to-authentik
  namespace: security
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: selfhosted
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-embedded-outpost
